@@ -1,5 +1,9 @@
 2014-09-15  Georg-Johann Lay  <avr@gjlay.de>
 
+	* avrtest.c (avr_op_*): Rename to func_*.
+
+2014-09-15  Georg-Johann Lay  <avr@gjlay.de>
+
 	* avrtest.c (avr_op_index_*): Rename to ID_*.
 
 2014-09-15  Georg-Johann Lay  <avr@gjlay.de>
